--- a/webroot/reports/udd/ui/templates/udd.tmpl
+++ b/webroot/reports/udd/ui/templates/udd.tmpl
@@ -1,7 +1,7 @@
 <script type="text/x-handlebars-template" id="query-select-popup-template">
     <form id="{{queryPrefix}}-select-popup-form" onsubmit="return false;">
         <div class="row-fluid" data-bind="visible: select_data_object().requestState() == cowc.DATA_REQUEST_STATE_FETCHING">
-            <i class="icon-spinner icon-spin"></i> Fetching..
+            <i class="fa-spinner fa-spin"></i> Fetching..
         </div>
         <div class="row-fluid" data-bind="visible: select_data_object().requestState() == cowc.DATA_REQUEST_STATE_SUCCESS_EMPTY">
             <p>Select Fields not found for this table. Please select a valid table name.</p>
