--- a/webroot/reports/udd/ui/templates/widget.html
+++ b/webroot/reports/udd/ui/templates/widget.html
@@ -4,8 +4,8 @@
             <span class="config-title"></span>
             <div class="title" data-bind="html:title"></div>
             <input class="edit-title" type="text" data-bind="value:title"/>
-            <div class="close fa fa-close">Delete</div>
-            <div class="config icon-gear"></div>
+            <div class="close fa fa-times"> Delete</div>
+            <div class="config fa fa-gear"></div>
         </div>
         <div class="panel-body">
             <div id="{{ id }}-config-selectors" class="config-selectors"></div>
