--- a/webroot/reports/udd/ui/templates/udd.tmpl
+++ b/webroot/reports/udd/ui/templates/udd.tmpl
@@ -1,19 +1,19 @@
 <script type="text/x-handlebars-template" id="query-select-popup-template">
     <form id="{{queryPrefix}}-select-popup-form" onsubmit="return false;">
-        <div class="row-fluid" data-bind="visible: select_data_object().requestState() == cowc.DATA_REQUEST_STATE_FETCHING">
+        <div class="row" data-bind="visible: select_data_object().requestState() == cowc.DATA_REQUEST_STATE_FETCHING">
             <i class="fa-spinner fa-spin"></i> Fetching..
         </div>
-        <div class="row-fluid" data-bind="visible: select_data_object().requestState() == cowc.DATA_REQUEST_STATE_SUCCESS_EMPTY">
+        <div class="row" data-bind="visible: select_data_object().requestState() == cowc.DATA_REQUEST_STATE_SUCCESS_EMPTY">
             <p>Select Fields not found for this table. Please select a valid table name.</p>
         </div>
-        <div class="row-fluid" data-bind="visible: select_data_object().requestState() == cowc.DATA_REQUEST_STATE_SUCCESS_NOT_EMPTY">
-            <div class="row-fluid">
+        <div class="row" data-bind="visible: select_data_object().requestState() == cowc.DATA_REQUEST_STATE_SUCCESS_NOT_EMPTY">
+            <div class="row">
                 <a class="pull-right selectAllLink " data-bind="text: (select_data_object().checked_fields().length == 0) ? 'Select All' : 'Clear All', click: select_data_object().on_select_all"></a>
             </div>
-            <div class="row-fluid row-fluid-3n" data-bind="foreach: select_data_object().select_fields()">
-                <div class="span4">
-                    <div class="row-fluid">
-                        <div class="span1">
+            <div class="row row-fluid-3n" data-bind="foreach: select_data_object().select_fields()">
+                <div class="col-xs-4">
+                    <div class="row">
+                        <div class="col-xs-1">
                             <input type="checkbox"
                                    data-bind="
                             name: name, value: name, checked: $root.select_data_object().checked_fields,
@@ -23,7 +23,7 @@
                             />
                             <span class="ace-lbl"></span>
                         </div>
-                        <div class="span11">
+                        <div class="col-xs-11">
                             <div class="select-label" data-bind="text: name, attr: { title: name }"></div>
                         </div>
                     </div>
