--- a/webroot/reports/udd/ui/templates/udd.tmpl
+++ b/webroot/reports/udd/ui/templates/udd.tmpl
@@ -10,7 +10,7 @@
             <div class="row">
                 <a class="pull-right selectAllLink " data-bind="text: (select_data_object().checked_fields().length == 0) ? 'Select All' : 'Clear All', click: select_data_object().on_select_all"></a>
             </div>
-            <div class="row row-fluid-3n" data-bind="foreach: select_data_object().select_fields()">
+            <div class="row row-3n" data-bind="foreach: select_data_object().select_fields()">
                 <div class="col-xs-4">
                     <div class="row">
                         <div class="col-xs-1">
