--- a/webroot/reports/udd/ui/templates/udd.tmpl
+++ b/webroot/reports/udd/ui/templates/udd.tmpl
@@ -1,7 +1,7 @@
 <script type="text/x-handlebars-template" id="query-select-popup-template">
     <form id="{{queryPrefix}}-select-popup-form" onsubmit="return false;">
         <div class="row" data-bind="visible: select_data_object().requestState() == cowc.DATA_REQUEST_STATE_FETCHING">
-            <i class="fa-spinner fa-spin"></i> Fetching..
+            <i class="fa fa-spinner fa-spin"></i> Fetching..
         </div>
         <div class="row" data-bind="visible: select_data_object().requestState() == cowc.DATA_REQUEST_STATE_SUCCESS_EMPTY">
             <p>Select Fields not found for this table. Please select a valid table name.</p>
@@ -10,7 +10,7 @@
             <div class="row">
                 <a class="pull-right selectAllLink " data-bind="text: (select_data_object().checked_fields().length == 0) ? 'Select All' : 'Clear All', click: select_data_object().on_select_all"></a>
             </div>
-            <div class="row row-3n" data-bind="foreach: select_data_object().select_fields()">
+            <div class="row-3n" data-bind="foreach: select_data_object().select_fields()">
                 <div class="col-xs-4">
                     <div class="row">
                         <div class="col-xs-1">
