--- a/webroot/reports/qe/ui/css/qe.main.css
+++ b/webroot/reports/qe/ui/css/qe.main.css
@@ -142,3 +142,6 @@ a.selectAllLink:hover {
 .and-clause-collection .collection-actions-add a {
     color: #3182bd;
 }
+.paddingright{
+    padding-right: 20px;
+}
