--- a/webroot/reports/qe/ui/templates/qe.tmpl
+++ b/webroot/reports/qe/ui/templates/qe.tmpl
@@ -12,21 +12,60 @@
             <div class="row-fluid">
                 <a class="pull-right selectAllLink " data-bind="text: (select_data_object().checked_fields().length == 0) ? 'Select All' : 'Clear All', click: select_data_object().on_select_all"></a>
             </div>
-            <div class="row-fluid row-fluid-3n" data-bind="foreach: select_data_object().select_fields()">
-                <div class="span4">
-                    <div class="row-fluid">
-                        <div class="span1">
-                            <input type="checkbox"
-                                   data-bind="
-                            name: name, value: name, checked: $root.select_data_object().checked_fields,
-                            click: function(data, event) { return $root.select_data_object().on_select($root, data, event); },
-                            enable: $root.select_data_object().enable_map()[name]()"
-                                   class="ace-input"
-                            />
-                            <span class="ace-lbl"></span>
+
+            <div data-bind="if: '{{queryPrefix}}' == 'stat'">
+                {{#each aggregateTypes}}
+                    <div id="{{queryPrefix}}-select-{{this}}-box" class="widget-box transparent">
+                        <div class="widget-header">
+                         <h4 class="smaller">{{this}}</h4>
                         </div>
-                        <div class="span11">
-                            <div class="select-label" data-bind="text: name, attr: { title: name }"></div>
+                        <div class="widget-body">
+                         <div class="widget-main">
+                             <div class="row-fluid row-fluid-3n" data-bind="foreach: select_data_object().select_fields()">
+                                 <div data-bind="if: $data.aggType == '{{this}}'" >
+                                     <div class="span4">
+                                         <div class="row-fluid">
+                                             <div class="span1">
+
+                                                 <input type="checkbox"
+                                                        data-bind="
+                                                 name: name, value: name, checked: $root.select_data_object().checked_fields,
+                                                 click: function(data, event) { return $root.select_data_object().on_select($root, data, event); },
+                                                 enable: $root.select_data_object().enable_map()[name]()"
+                                                        class="ace-input"
+                                                 />
+                                                 <span class="ace-lbl"></span>
+                                             </div>
+                                             <div class="span11 paddingright">
+                                                 <div class="select-label" data-bind="text: name, attr: { title: name }"></div>
+                                             </div>
+                                         </div>
+                                     </div>
+                                 </div>
+                             </div>
+                         </div>
+                        </div>
+                    </div>
+                {{/each}}
+            </div>
+
+            <div data-bind="if: '{{queryPrefix}}' != 'stat'">
+                <div class="row-fluid row-fluid-3n" data-bind="foreach: select_data_object().select_fields()">
+                    <div class="span4">
+                        <div class="row-fluid">
+                            <div class="span1">
+                                <input type="checkbox"
+                                       data-bind="
+                                name: name, value: name, checked: $root.select_data_object().checked_fields,
+                                click: function(data, event) { return $root.select_data_object().on_select($root, data, event); },
+                                enable: $root.select_data_object().enable_map()[name]()"
+                                       class="ace-input"
+                                />
+                                <span class="ace-lbl"></span>
+                            </div>
+                            <div class="span11">
+                                <div class="select-label" data-bind="text: name, attr: { title: name }"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
