--- a/webroot/reports/udd/ui/css/udd.css
+++ b/webroot/reports/udd/ui/css/udd.css
@@ -40,7 +40,7 @@
 }
 #content-container .placeholder {
   display: block;
-  margin: 8px;
+  margin-top: 8px;
   text-align: center;
   border: 1px dashed #ccc;
   color: #ccc;
