--- a/webroot/reports/qe/ui/templates/qe.tmpl
+++ b/webroot/reports/qe/ui/templates/qe.tmpl
@@ -13,60 +13,60 @@
                 <a class="pull-right selectAllLink " data-bind="text: (select_data_object().checked_fields().length == 0) ? 'Select All' : 'Clear All', click: select_data_object().on_select_all"></a>
             </div>
 
-            <div data-bind="if: '{{queryPrefix}}' == 'stat'">
-                {{#each aggregateTypes}}
-                    <div id="{{queryPrefix}}-select-{{this}}-box" class="widget-box transparent">
-                        <div class="widget-header">
-                         <h4 class="smaller">{{this}}</h4>
-                        </div>
-                        <div class="widget-body">
-                         <div class="widget-main">
-                             <div class="row-3n" data-bind="foreach: select_data_object().select_fields()">
-                                 <div class="col-xs-4">
-                                     <div class="row">
-                                         <div class="col-xs-1">
-                                             <input type="checkbox"
+            {{#IfCompare queryPrefix 'stat' operator='=='}}
+                <div class="col-xs-12">
+                    {{#each aggregateTypes}}
+                        <div id="{{../queryPrefix}}-select-{{this}}-box">
+                            <div class="col-xs-12 select-aggregate-header">
+                                <h4 class="smaller">{{this}}</h4>
+                            </div>
+                             <div class="col-xs-12 row-3n select-aggregate-body" data-bind="foreach: select_data_object().select_fields()">
+                                 <div data-bind="if: $data.aggregate_type == '{{this}}'" >
+                                     <div class="col-xs-4">
+                                         <div class="row">
+                                             <div class="col-xs-1">
+                                                 <input type="checkbox"
                                                     data-bind="
-                            name: name, value: name, checked: $root.select_data_object().checked_fields,
-                            click: function(data, event) { return $root.select_data_object().on_select($root, data, event); },
-                            enable: $root.select_data_object().enable_map()[name]()"
+                                                    name: name, value: name, checked: $root.select_data_object().checked_fields,
+                                                    click: function(data, event) { return $root.select_data_object().on_select($root, data, event); },
+                                                    enable: $root.select_data_object().enable_map()[name]()"
                                                     class="ace-input"
-                                             />
-                                             <span class="ace-lbl"></span>
-                                         </div>
-                                         <div class="col-xs-11">
-                                             <div class="select-label" data-bind="text: name, attr: { title: name }"></div>
+                                                 />
+                                                 <span class="ace-lbl"></span>
+                                             </div>
+                                             <div class="col-xs-11">
+                                                 <div class="select-label" data-bind="text: name, attr: { title: name }"></div>
+                                             </div>
                                          </div>
                                      </div>
                                  </div>
-                             </div>
-                         </div>
-                        </div>
-                    </div>
-                {{/each}}
-            </div>
-
-            <div data-bind="if: '{{queryPrefix}}' != 'stat'">
-                <div class="row-3n" data-bind="foreach: select_data_object().select_fields()">
-                    <div class="col-xs-4">
-                        <div class="row">
-                            <div class="col-xs-1">
-                                <input type="checkbox"
-                                       data-bind="
-                            name: name, value: name, checked: $root.select_data_object().checked_fields,
-                            click: function(data, event) { return $root.select_data_object().on_select($root, data, event); },
-                            enable: $root.select_data_object().enable_map()[name]()"
-                                       class="ace-input"
-                                />
-                                <span class="ace-lbl"></span>
                             </div>
-                            <div class="col-xs-11">
-                                <div class="select-label" data-bind="text: name, attr: { title: name }"></div>
+                        </div>
+                    {{/each}}
+                </div>
+            {{else}}
+                <div>
+                    <div class="row-3n" data-bind="foreach: select_data_object().select_fields()">
+                        <div class="col-xs-4">
+                            <div class="row">
+                                <div class="col-xs-1">
+                                    <input type="checkbox"
+                                           data-bind="
+                                name: name, value: name, checked: $root.select_data_object().checked_fields,
+                                click: function(data, event) { return $root.select_data_object().on_select($root, data, event); },
+                                enable: $root.select_data_object().enable_map()[name]()"
+                                           class="ace-input"
+                                    />
+                                    <span class="ace-lbl"></span>
+                                </div>
+                                <div class="col-xs-11">
+                                    <div class="select-label" data-bind="text: name, attr: { title: name }"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            {{/IfCompare}}
         </div>
     </form>
 </script>
