Select modal redesign: Added select All feature for aggregate fields and defaults for stats and flow series table

--- a/webroot/reports/qe/ui/css/qe.main.css
+++ b/webroot/reports/qe/ui/css/qe.main.css
@@ -19,6 +19,11 @@ textarea[name="select"] {
     border-bottom: 1px solid #EEEEEE;
     padding: 5px 0;
 }
+
+.select-aggregate-link {
+    border-bottom: 1px solid #EEEEEE;
+    padding: 3px 0;
+}
 .select-aggregate-header h4 {
     margin: 0;
 }
