--- a/webroot/reports/qe/ui/templates/qe.tmpl
+++ b/webroot/reports/qe/ui/templates/qe.tmpl
@@ -13,12 +13,26 @@
                 <a class="pull-right selectAllLink " data-bind="text: (select_data_object().checked_fields().length == 0) ? 'Select All' : 'Clear All', click: select_data_object().on_select_all"></a>
             </div>
 
-            {{#IfCompare queryPrefix 'stat' operator='=='}}
+            {{#IfCompare specialQueryPrefix true operator='=='}}
                 <div class="col-xs-12">
                     {{#each aggregateTypes}}
                         <div id="{{../queryPrefix}}-select-{{this}}-box">
-                            <div class="col-xs-12 select-aggregate-header">
-                                <h4 class="smaller">{{this}}</h4>
+
+                            <div data-bind="if: 'Time Range' == '{{this}}'" >
+                                <div class="col-xs-12 select-aggregate-header">
+                                    <h4 class="smaller">{{this}}</h4>
+                                </div>
+                            </div>
+
+                            <div data-bind="if: 'Time Range' != '{{this}}'" >
+                                <div class="col-xs-6 select-aggregate-header">
+                                    <h4 class="smaller">{{this}}</h4>
+                                </div>
+                            </div>
+                            <div data-bind="if: 'Time Range' != '{{this}}'" >
+                                <div class="col-xs-6 select-aggregate-link">
+                                    <a class="pull-right selectAllLink " data-bind="text: select_data_object().getSelectAggregateStatus($root,'{{this}}')  == 0 ? 'Select {{this}}' : 'Clear {{this}}', click: function() { select_data_object().on_select_aggregate($root, '{{this}}',event) }"></a>
+                                </div>
                             </div>
                              <div class="col-xs-12 row-3n select-aggregate-body" data-bind="foreach: select_data_object().select_fields()">
                                  <div data-bind="if: $data.aggregate_type == '{{this}}'" >
